Added custom css and js

--- a/_includes/components/header.html
+++ b/_includes/components/header.html
@@ -17,7 +17,7 @@
         </p>
     </div>
     <div class="column">
-        <div class="toggle-container">
+        <div class="yolo-toggle-container">
             <div class="toggle-button">
                 <span id="theme-toggle" class="material-icons md-36">light_mode</span>
             </div>
