--- a/_includes/components/arrow.html
+++ b/_includes/components/arrow.html
@@ -1,4 +1,4 @@
 {% assign link = include.link | default: '#' %}
-<a href="{{ link }}" class="back-to-top">
+<a href="{{ link }}" class="yolo-to-top">
     <span class="material-icons md-36">keyboard_double_arrow_up</span>
 </a>
