--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,16 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Site title -->
     <title>{{ site.data.settings.title }}</title>
-    <!-- Fonts -->
-    {% if site.data.fonts.size > 0 %}
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family={% for font in site.data.fonts %}{{ font.name | replace: ' ', '+' }}{% if font.weights %}:{% endif %}{{ font.weights | remove: ' ' }}{% if forloop.last != true %}|{% endif %}{% endfor %}">
-    {% endif %}
-    <!-- Material Icons -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Pre-body JavaScript files -->
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/snippets.js"></script>
-    <!-- Main site stylesheet, generated via sass -->
-    <link rel="stylesheet" href="css/main.css">
+    <!-- Site styling resources including fonts -->
+    {% include styles.html %}
 </head>
