Adding new themes

--- a/_sass/yolo/brand/syntax/_domino.scss
+++ b/_sass/yolo/brand/syntax/_domino.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// newspaper syntax theme
+// onebit syntax theme
 // ----------------------------------------------------------------------------
 :root[light] {
   --syntax-text: #000;
