--- a/_sass/yolo/brand/syntax/_newwave.scss
+++ b/_sass/yolo/brand/syntax/_newwave.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// neo syntax theme
+// newwave syntax theme
 // ----------------------------------------------------------------------------
 :root[light] {
   --syntax-text: #cacef7;
