--- a/_sass/yolo/brand/theme/_domino.scss
+++ b/_sass/yolo/brand/theme/_domino.scss
@@ -1,49 +1,49 @@
 // ----------------------------------------------------------------------------
-// nono theme
+// onebit theme
 // ----------------------------------------------------------------------------
 :root[light] {
   // primary colors
   --primary-color: #fff;
   --on-primary-color: #000;
-  --primary-container-color: #fff;
-  --on-primary-container-color: #000;
+  --primary-container-color: #000;
+  --on-primary-container-color: #fff;
   // secondary colors
   --secondary-color: #000;
   --on-secondary-color: #fff;
   --secondary-container-color: #fff;
   --on-secondary-container-color: #000;
   // tertiary colors
-  --tertiary-color: #4597ff;
-  --on-tertiary-color: #fff;
+  --tertiary-color: #00c853;
+  --on-tertiary-color: #000;
   // general colors
-  --link-color: #4597ff;
+  --link-color: #0091ea;
   --neutral-color: #000;
   --on-neutral-color: #fff;
   // font families
-  --font-family-primary: "Red Hat Mono", monospace;
-  --font-family-secondary: "Red Hat Text", sans-serif;
+  --font-family-primary: "Source Code Pro", monospace;
+  --font-family-secondary: "Open Sans", sans-serif;
   --font-family-monospace: "Red Hat Mono", monospace;
 }
 :root[dark] {
   // primary colors
   --primary-color: #000;
   --on-primary-color: #fff;
-  --primary-container-color: #000;
-  --on-primary-container-color: #fff;
+  --primary-container-color: #fff;
+  --on-primary-container-color: #000;
   // secondary colors
   --secondary-color: #fff;
   --on-secondary-color: #000;
-  --secondary-container-color: #fff;
-  --on-secondary-container-color: #000;
+  --secondary-container-color: #000;
+  --on-secondary-container-color: #fff;
   // tertiary colors
-  --tertiary-color: #4597ff;
+  --tertiary-color: #00e676;
   --on-tertiary-color: #000;
   // general colors
-  --link-color: #4597ff;
+  --link-color: #4995ef;
   --neutral-color: #fff;
   --on-neutral-color: #000;
   // font families
-  --font-family-primary: "Red Hat Mono", monospace;  
-  --font-family-secondary: "Red Hat Text", sans-serif;
+  --font-family-primary: "Source Code Pro", monospace;
+  --font-family-secondary: "Open Sans", sans-serif;
   --font-family-monospace: "Red Hat Mono", monospace;
 }
