--- a/_sass/yolo/brand/theme/_dusk.scss
+++ b/_sass/yolo/brand/theme/_dusk.scss
@@ -3,7 +3,7 @@
 // ----------------------------------------------------------------------------
 :root[light] {
   // primary colors
-  --primary-color: #fff3eb;
+  --primary-color: #fffcfb;
   --on-primary-color: #20142e;
   --primary-container-color: #380749;
   --on-primary-container-color: #f45e02;
