--- a/_sass/yolo/brand/theme/_newspaper.scss
+++ b/_sass/yolo/brand/theme/_newspaper.scss
@@ -28,8 +28,8 @@
   // primary colors
   --primary-color: #141414;
   --on-primary-color: #e0e0e0;
-  --primary-container-color: #0a0a0a;
-  --on-primary-container-color: #999999;
+  --primary-container-color: #e0e0e0;
+  --on-primary-container-color: #0a0a0a;
   // secondary colors
   --secondary-color: #e0e0e0;
   --on-secondary-color: #5c5c5c;
