--- a/_sass/yolo/brand/theme/_newwave.scss
+++ b/_sass/yolo/brand/theme/_newwave.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// neo theme
+// newwave theme
 // ----------------------------------------------------------------------------
 :root[light] {
   // primary colors
