--- a/_sass/yolo/brand/theme/_bubblegum.scss
+++ b/_sass/yolo/brand/theme/_bubblegum.scss
@@ -1,5 +1,5 @@
 // ----------------------------------------------------------------------------
-// wip theme for testing work-in-progess
+// bubble gum
 // ----------------------------------------------------------------------------
 :root[light] {
   // primary colors
