--- a/_sass/yolo/brand/theme/_reveal.scss
+++ b/_sass/yolo/brand/theme/_reveal.scss
@@ -32,12 +32,12 @@
   --on-primary-container-color: #ec0a6f;
   // secondary colors
   --secondary-color: #06a6dc;
-  --on-secondary-color: #ebfaff;
+  --on-secondary-color: #091129;
   --secondary-container-color: #033c50;
   --on-secondary-container-color: #ebfaff;
   // tertiary colors
   --tertiary-color: #f72685;
-  --on-tertiary-color: #feebf4;
+  --on-tertiary-color: #091129;
   // general colors
   --link-color: #339ff4;
   --neutral-color: #e0e0e0;
