--- a/_sass/yolo/brand/theme/_bubblegum.scss
+++ b/_sass/yolo/brand/theme/_bubblegum.scss
@@ -10,13 +10,13 @@
   // secondary colors  
   --secondary-color: #c9184b;
   --on-secondary-color: #fff0f3;
-  --secondary-container-color: #fff0f3;
-  --on-secondary-container-color: #c9184b;
+  --secondary-container-color: #c9184b;
+  --on-secondary-container-color: #fff0f3;
   // tertiary colors
-  --tertiary-color: #000;
+  --tertiary-color: #ff87bd;
   --on-tertiary-color: #fff0f3;
   // general colors
-  --link-color: #000;
+  --link-color: #ff87bd;
   --neutral-color: #212121;
   --on-neutral-color: #e0e0e0;
   // font families
@@ -33,13 +33,13 @@
   // secondary colors  
   --secondary-color: #fff0f3;
   --on-secondary-color: #c9184b;
-  --secondary-container-color: #c9184b;
-  --on-secondary-container-color: #fff0f3;
+  --secondary-container-color: #fff0f3;
+  --on-secondary-container-color: #c9184b;
   // tertiary colors
-  --tertiary-color: #000;
+  --tertiary-color: #ffa1cb;
   --on-tertiary-color: #c9184b;
   // general colors
-  --link-color: #000;
+  --link-color: #ffa1cb;
   --neutral-color: #e0e0e0;
   --on-neutral-color: #212121;
   // font families
