--- a/_sass/yolo/brand/theme/_corbs.scss
+++ b/_sass/yolo/brand/theme/_corbs.scss
@@ -10,8 +10,8 @@
   // secondary colors  
   --secondary-color: #3b0aa4;
   --on-secondary-color: #ecefff;
-  --secondary-container-color: #ecefff;
-  --on-secondary-container-color: #3b0aa4;
+  --secondary-container-color: #150244;
+  --on-secondary-container-color: #f72685;
   // tertiary colors
   --tertiary-color: #f72685;
   --on-tertiary-color: #ecefff;
@@ -33,8 +33,8 @@
   // secondary colors  
   --secondary-color: #5872ef;
   --on-secondary-color: #0f0132;
-  --secondary-container-color: #0f0132;
-  --on-secondary-container-color: #5872ef;
+  --secondary-container-color: #280873;
+  --on-secondary-container-color: #f72685;
   // tertiary colors
   --tertiary-color: #f72685;
   --on-tertiary-color: #0f0132;
