--- a/_sass/yolo/brand/theme/_mint.scss
+++ b/_sass/yolo/brand/theme/_mint.scss
@@ -1,22 +1,22 @@
 // ----------------------------------------------------------------------------
-// purple theme
+// mint theme
 // ----------------------------------------------------------------------------
 :root[light] {
   // primary colors
-  --primary-color: #f3e6f5;
-  --on-primary-color: #4a138c;
-  --primary-container-color: #4a138c;
-  --on-primary-container-color: #fff0f3;
+  --primary-color: #f4fff4;
+  --on-primary-color: #006e2e;
+  --primary-container-color: #00c854;
+  --on-primary-container-color: #f4fff4;
   // secondary colors  
-  --secondary-color: #4a138c;
-  --on-secondary-color: #f3e6f5;
-  --secondary-container-color: #f3e6f5;
-  --on-secondary-container-color: #4a138c;
+  --secondary-color: #00c854;
+  --on-secondary-color: #f4fff4;
+  --secondary-container-color: #00c854;
+  --on-secondary-container-color: #f4fff4;
   // tertiary colors
-  --tertiary-color: #ab00ff;
-  --on-tertiary-color: #f3e6f5;
+  --tertiary-color: #008343;
+  --on-tertiary-color: #f4fff4;
   // general colors
-  --link-color: #ab00ff;
+  --link-color: #000;
   --neutral-color: #212121;
   --on-neutral-color: #e0e0e0;
   // font families
@@ -26,20 +26,20 @@
 }
 :root[dark] {
   // primary colors
-  --primary-color: #4a138c;
-  --on-primary-color: #f3e6f5;
-  --primary-container-color: #f3e6f5;
-  --on-primary-container-color: #4a138c;
+  --primary-color: #00a344;
+  --on-primary-color: #f4fff4;
+  --primary-container-color: #f4fff4;
+  --on-primary-container-color: #00a344;
   // secondary colors  
-  --secondary-color: #f3e6f5;
-  --on-secondary-color: #4a138c;
-  --secondary-container-color: #4a138c;
-  --on-secondary-container-color: #f3e6f5;
+  --secondary-color: #f4fff4;
+  --on-secondary-color: #00a344;
+  --secondary-container-color: #f4fff4;
+  --on-secondary-container-color: #00a344;
   // tertiary colors
-  --tertiary-color: #c349ff;
-  --on-tertiary-color: #4a138c;
+  --tertiary-color: #11ff89;
+  --on-tertiary-color: #00a344;
   // general colors
-  --link-color: #c349ff;
+  --link-color: #000;
   --neutral-color: #212121;
   --on-neutral-color: #e0e0e0;
   // font families
