--- a/_sass/yolo/brand/theme/_newwave.scss
+++ b/_sass/yolo/brand/theme/_newwave.scss
@@ -10,8 +10,8 @@
   // secondary colors  
   --secondary-color: #1042ff;
   --on-secondary-color: #ebefff;
-  --secondary-container-color: #bf3efd;
-  --on-secondary-container-color: #f5ebff;
+  --secondary-container-color: #251359;
+  --on-secondary-container-color: #bf3efd;
   // tertiary colors  
   --tertiary-color: #f9246c;
   --on-tertiary-color: #feebf2;
@@ -33,8 +33,8 @@
   // secondary colors  
   --secondary-color: #f9246c;
   --on-secondary-color: #090b35;
-  --secondary-container-color: #b5036a;
-  --on-secondary-container-color: #f6a5d4;
+  --secondary-container-color: #251359;
+  --on-secondary-container-color: #bf3efd;
   // tertiary colors  
   --tertiary-color: #3b6afe;
   --on-tertiary-color: #090b35;
