--- a/_sass/yolo/brand/theme/_seaside.scss
+++ b/_sass/yolo/brand/theme/_seaside.scss
@@ -9,8 +9,8 @@
   --on-primary-container-color: #0a3e47;
   // secondary colors  
   --secondary-color: #015d8f;
-  --on-secondary-color: #ecf8ff;
-  --secondary-container-color: #ecf8ff;
+  --on-secondary-color: #dbf5fa;
+  --secondary-container-color: #dbf5fa;
   --on-secondary-container-color: #015d8f;
   // tertiary colors
   --tertiary-color: #f95838;
@@ -32,8 +32,8 @@
   --on-primary-container-color: #0a3e47;
   // secondary colors  
   --secondary-color: #5de4ff;
-  --on-secondary-color: #001b29;
-  --secondary-container-color: #001b29;
+  --on-secondary-color: #002e46;
+  --secondary-container-color: #002e46;
   --on-secondary-container-color: #90e0ef;
   // tertiary colors
   --tertiary-color: #f95838;
