--- a/_sass/yolo/brand/theme/_zoot.scss
+++ b/_sass/yolo/brand/theme/_zoot.scss
@@ -10,8 +10,8 @@
   // secondary colors  
   --secondary-color: #414363;
   --on-secondary-color: #edf2f4;
-  --secondary-container-color: #edf2f4;
-  --on-secondary-container-color: #414363;
+  --secondary-container-color: #2b2d43;
+  --on-secondary-container-color: #edf2f4;
   // tertiary colors
   --tertiary-color: #d90529;
   --on-tertiary-color: #edf2f4;
@@ -33,8 +33,8 @@
   // secondary colors  
   --secondary-color: #fff;
   --on-secondary-color: #101119;
-  --secondary-container-color: #101119;
-  --on-secondary-container-color: #fff;
+  --secondary-container-color: #fff;
+  --on-secondary-container-color: #101119;
   // tertiary colors
   --tertiary-color: #fa1137;
   --on-tertiary-color: #101119;
