--- a/_includes/demo/theme-swatches.html
+++ b/_includes/demo/theme-swatches.html
@@ -8,10 +8,26 @@
 </div>
 <div class="columns">
 	<div class="column">
+		<div class="cell primary-container-color">primary-container-color</div>
+	</div>
+	<div class="column">
+		<div class="cell on-primary-container-color">on-primary-container-color</div>
+	</div>	
+</div>
+<div class="columns">
+	<div class="column">
 		<div class="cell secondary-color">secondary-color</div>
 	</div>
 	<div class="column">
 		<div class="cell on-secondary-color">on-secondary-color</div>
+	</div>	
+</div>
+<div class="columns">
+	<div class="column">
+		<div class="cell primary-container-color">secondary-container-color</div>
+	</div>
+	<div class="column">
+		<div class="cell on-primary-container-color">on-secondary-container-color</div>
 	</div>	
 </div>
 <div class="columns">
@@ -24,9 +40,14 @@
 </div>
 <div class="columns">
 	<div class="column">
-		<div class="cell primary-container-color">primary-container-color</div>
+		<div class="cell link-color">link-color</div>
+	</div>
+</div>
+<div class="columns">
+	<div class="column">
+		<div class="cell neutral-color">neutral-color</div>
 	</div>
 	<div class="column">
-		<div class="cell on-primary-container-color">on-primary-container-color</div>
+		<div class="cell on-neutral-color">on-neutral-color</div>
 	</div>	
 </div>
