--- a/_sass/yolo/utilities/_all.scss
+++ b/_sass/yolo/utilities/_all.scss
@@ -27,6 +27,10 @@
 }
 
 // material-icon styling
+.material-icons.primary-color {
+  color: red;
+}
+
 .material-icons.md-18 {
   font-size: 18px;
 }
