--- a/_includes/demo/syntax-theme-swatches.html
+++ b/_includes/demo/syntax-theme-swatches.html
@@ -1,23 +1,100 @@
 <div class="columns">
-    <div class="column">
-        <div class="cell syntax-container-color">bg</div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-container-color">bg</div>
     </div>
-    <div class="column">
-        <div class="cell syntax-text-color">txt</div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-text-color">text</div>
     </div>
-    <div class="column">
-        <div class="cell syntax-highlight-line-color">hll</div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-highlight-line-color">hll</div>
     </div>
-    <div class="column">
-        <div class="cell syntax-text-color">syntax-text-color</div>
+</div>
+<div class="columns">
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-error-color">err</div>
     </div>
-    <div class="column">
-        <div class="cell syntax-container-color">syntax-container-color</div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-punctuation-color">p</div>
     </div>
-    <div class="column">
-        <div class="cell syntax-text-color">syntax-text-color</div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-text-whitespace-color">w</div>
     </div>
-    <div class="column">
-        <div class="cell syntax-container-color">syntax-container-color</div>
+</div>
+<div class="columns">
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-comment-color">c</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-comment-hashbang-color">ch</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-comment-multiline-color">cm</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-comment-preproc-color">cp</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-comment-preprocfile-color">cpf</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-comment-single-color">c1</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-comment-special-color">cs</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-generic-deleted-color">gd</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-generic-emph-color">ge</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-generic-error-color">ge</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-generic-heading-color">gh</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-generic-inserted-color">gi</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-generic-output-color">go</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-generic-prompt-color">gp</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-generic-strong-color">gs</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-generic-subheading-color">gu</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-generic-traceback-color">gt</div>
+    </div>
+</div>
+<div class="columns">
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-keyword-color">k</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-keyword-constant-color">kc</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-keyword-declaration-color">kd</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-keyword-namespace-color">kn</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-keyword-pseudo-color">kp</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-keyword-reserved-color">kr</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-keyword-type-color">kt</div>
     </div>
 </div>
