--- a/_sass/yolo/core/_layout.scss
+++ b/_sass/yolo/core/_layout.scss
@@ -51,6 +51,9 @@
   padding: .25rem .5rem;
   position: relative;
   text-align: left;
+  &.is-center-text {
+    text-align: center;
+  }
 }
 
 .cell-header {
