--- a/_includes/demo/syntax-theme-swatches.html
+++ b/_includes/demo/syntax-theme-swatches.html
@@ -98,3 +98,11 @@
         <div class="cell is-center-text syntax-keyword-type-color">kt</div>
     </div>
 </div>
+<div class="columns">
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-literal-color">l</div>
+    </div>
+    <div class="column is-1">
+        <div class="cell is-center-text syntax-literal-date-color">ld</div>
+    </div>
+</div>
